--- a/an-identity-ui/src/main/js/src/templates/welcome.html
+++ b/an-identity-ui/src/main/js/src/templates/welcome.html
@@ -1,7 +1,4 @@
-<div class="row">
-	<div class="col-md-12 page-header">
-		<h2>Welcome!</h2>
-	</div>
-	<div welcome-text class="col-md-12">
-	</div>
+<div class="col-md-12 page-header">
+	<h2 welcome-title>Welcome</h2>
 </div>
+<div welcome-text class="col-md-12"></div>
