--- a/an-identity-auth/an-identity-auth-ui/src/main/js/templates/login.html
+++ b/an-identity-auth/an-identity-auth-ui/src/main/js/templates/login.html
@@ -5,184 +5,8 @@
 	<div class="col-md-4">
 		<div login-text></div>
 	</div>
-	<div class="col-md-6 col-md-offset-2">
-		<div class="row well well-sm">
-			<br />
-			<div class="col-md-12">
-				<ul class="nav nav-tabs">
-					<li ng-repeat="s in sources"
-						ng-class="s.sourceId == config.sourceId ? 'active' : ''"><a
-						href="#/auth/login?sourceId={{s.sourceId}}&mode={{config.mode}}">{{s.sourceName}}</a>
-					</li>
-				</ul>
-			</div>
-			<div class="col-md-12 form"
-				ng-if="config.sourceId && config.mode == 'login'">
-				<div class="row">
-					<div class="col-md-12"
-						style="padding-top: 10px; padding-bottom: 10px">
-						<h4>Login</h4>
-						Please enter your username, password, and TOTP (where applicable).
-					</div>
-					<div class="col-md-12">
-						<div class="alert alert-danger" role="alert" ng-if="error">
-							<i class="glyphicon glyphicon-exclamation-sign"> </i>
-							{{error.data.message}}
-						</div>
-						<form ng-submit="login()">
-							<div class="form-group">
-								<label>Username</label> <input ng-model="credentials.username"
-									class="form-control" />
-							</div>
-							<div class="form-group">
-								<label>Password</label> <input ng-model="credentials.password"
-									class="form-control" type="password" />
-							</div>
-							<div class="form-group" ng-if="source.secondFactor">
-								<label>OTP</label> <input ng-model="credentials.secondFactor"
-									class="form-control" type="password" />
-							</div>
-							<div class="form-group">
-								<span class="pull-right"> <a class="small btn btn-link"
-									href="#/auth/login?mode=reset&sourceId={{source.sourceId}}&username={{credentials.username}}">Reset
-										or change Password</a>
-									<button class="btn btn-primary">Log in!</button>
-							</div>
-						</form>
-					</div>
-				</div>
-			</div>
-			<div class="col-md-12 form">
-				<div class="row" ng-if="config.mode == 'reset'">
-					<div class="col-md-12"
-						style="padding-top: 10px; padding-bottom: 10px">
-						<div class="form-group">
-							<h4>Password Reset</h4>
-							If you forgot your password, just enter your username here.
-						</div>
-						<div class="form-group small">
-							- Initiate a password reset<br /> - <a
-								href="#/auth/login?mode=resetWithOldPassword&sourceId={{source.sourceId}}&username={{reset.username}}">I
-								know my existing password</a><br /> - <a
-								href="#/auth/login?mode=resetWithToken&sourceId={{source.sourceId}}&username={{reset.username}}">I
-								received reset instruction by mail</a>
-						</div>
-						<div class="alert alert-success" role="alert" ng-if="success">
-							<i class="glyphicon glyphicon-exclamation-sign"> </i> {{success}}
-						</div>
-						<div class="form-group">
-							<label>Username</label> <input ng-model="reset.username"
-								class="form-control" />
-						</div>
-						<div class="form-group">
-							<span class="pull-right"> <a class="small btn btn-link"
-								href="#/auth/login?mode=login&sourceId={{source.sourceId}}&username={{reset.username}}">Remember
-									Now?</a> <span class="btn btn-primary" ng-click="resetPassword()">Reset!</span>
-							</span>
-						</div>
-					</div>
-				</div>
-				<div class="row" ng-if="config.mode == 'resetWithOldPassword'">
-					<div class="col-md-12"
-						style="padding-top: 10px; padding-bottom: 10px">
-						<div class="form-group">
-							<h4>Password Reset</h4>
-							Update your password using your OLD password.
-						</div>
-						<div class="form-group small">
-							- <a
-								href="#/auth/login?mode=reset&sourceId={{source.sourceId}}&username={{reset.username}}">Initiate
-								a password reset</a><br /> - I know my existing password<br /> - <a
-								href="#/auth/login?mode=resetWithToken&sourceId={{source.sourceId}}&username={{reset.username}}">I
-								received reset instruction by mail</a>
-						</div>
-						<div class="alert alert-danger" role="alert" ng-if="error">
-							<i class="glyphicon glyphicon-exclamation-sign"> </i>
-							{{error.data.message}}
-						</div>
-						<div class="alert alert-success" role="alert" ng-if="success">
-							<i class="glyphicon glyphicon-exclamation-sign"> </i> {{success}}
-							<a
-								href="#/auth/login?mode=login&sourceId={{source.sourceId}}&username={{reset.username}}">Login</a>
-						</div>
-						<div class="form-group">
-							<label>Username</label> <input ng-model="reset.username"
-								class="form-control" />
-						</div>
-						<div class="form-group">
-							<label>Old Password</label> <input ng-model="reset.oldPassword"
-								class="form-control" type="password" />
-						</div>
-						<div class="form-group">
-							<label>New Password</label> <input ng-model="reset.newPassword"
-								class="form-control" type="password" />
-						</div>
-						<div class="form-group">
-							<span class="pull-right"> <span class="btn btn-primary"
-								ng-click="resetPassword()">Reset!</span>
-							</span>
-						</div>
-					</div>
-				</div>
-				<div class="row" ng-if="config.mode == 'resetWithToken'">
-					<div class="col-md-12"
-						style="padding-top: 10px; padding-bottom: 10px">
-						<div class="form-group">
-							<h4>Password Reset</h4>
-							Update your password with a reset token from your email.
-						</div>
-						<div class="form-group small">
-							- <a
-								href="#/auth/login?mode=reset&sourceId={{source.sourceId}}&username={{reset.username}}">Initiate
-								a password reset</a><br /> - <a
-								href="#/auth/login?mode=resetWithOldPassword&sourceId={{source.sourceId}}&username={{reset.username}}">I
-								know my existing password</a><br /> - I received reset instruction
-							by mail
-						</div>
-						<div class="alert alert-danger" role="alert" ng-if="error">
-							<i class="glyphicon glyphicon-exclamation-sign"> </i>
-							{{error.data.message}}
-						</div>
-						<div class="alert alert-success" role="alert" ng-if="success">
-							<i class="glyphicon glyphicon-exclamation-sign"> </i> {{success}}
-							<a
-								href="#/auth/login?mode=login&sourceId={{source.sourceId}}&username={{reset.username}}">Login</a>
-						</div>
-						<div class="form-group">
-							<label>Username</label> <input ng-model="reset.username"
-								class="form-control" />
-						</div>
-						<div class="form-group">
-							<label>Token</label> <input ng-model="reset.token"
-								class="form-control" type="password" />
-						</div>
-						<div class="form-group"
-							ng-if="reset.token && reset.token.length>0">
-							<label>Email</label> <input ng-model="reset.email"
-								class="form-control" />
-						</div>
-						<div class="form-group"
-							ng-if="reset.token && reset.token.length>0">
-							<label>TOTP (if applicable)</label> <input
-								ng-model="reset.secondFactor" class="form-control" />
-						</div>
-						<div class="form-group"
-							ng-if="reset.email && reset.email.length>0">
-							<label>New Password</label> <input ng-model="reset.newPassword"
-								class="form-control" type="password" />
-						</div>
-						<div class="form-group">
-							<span class="pull-right"> <a class="small btn btn-link"
-								href="#/auth/login?mode=login&sourceId={{source.sourceId}}&username={{reset.username}}">Remember
-									Now?</a>
-								<button class="btn btn-primary" ng-click="resetPassword()">Reset!</button>
-							</span>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
+	<ng-include src="'auth/templates/login_form.html'" />
+	
 </div>
 
 <div class="row" ng-if="status.loggedIn">
@@ -190,47 +14,5 @@
 		<h2 welcome-title>Welcome</h2>
 	</div>
 	<div welcome-text class="col-md-12"></div>
-
-	<div class="col-md-12">
-	
-		
-	
-		<div class="row well well-sm">
-			<div ng-include="'auth/templates/notifications.html'">
-			</div>
-			<br/>
-			<ul class="nav nav-tabs">
-				<!--  hardcoded order -->
-				<li ng-class="[{'active': 'applications'==selectedTab}]">
-					<a href="#/auth/login?selectedTab=applications">Applications</a>
-				</li>
-				<li ng-class="[{'active': 'vpns'==selectedTab}]">
-					<a href="#/auth/login?selectedTab=vpns">VPNs</a>
-				</li>
-				<li ng-class="[{'active': 'accounts'==selectedTab}]">
-					<a href="#/auth/login?selectedTab=accounts">Accounts</a>
-				</li>
-				<li ng-class="[{'active': 'otptokens'==selectedTab}]">
-					<a href="#/auth/login?selectedTab=otptokens">OTP Tokens</a>
-				</li>
-				<!--  dynamic rest -->
-				<li include-components path="/dashboard" ng-class="[{'active': item.id ==selectedTab}]">
-					<a ng-if="item.visible && !item.defaultItem" href="#/auth/login?selectedTab={{ item.id }}">{{item.title}}</a>
-				</li>
-			</ul>
-			<div class="tab-content">
-				<br/>
-				<div include-components path="/dashboard"  >
-					<div ng-if="item.visible" id="tab_{{item.id}}" ng-show="item.id==selectedTab"  ng-class="[{'active': item.id==selectedTab},tab-pane,fade]" ng-include="item.templateUrl"></div>
-				</div>
-			</div>
-		</div>
-	</div>
-
-	<!--  
-	<div class="col-md-12" include-components path="/dashboard">
-		<div class="row" ng-include="item.templateUrl">
-		</div>
-	</div>
-	 -->
+	You are already logged in.... {{ showDashboard() }}
 </div>
