--- a/an-identity-openid/an-identity-openid-ui/src/main/js/templates/application.html
+++ b/an-identity-openid/an-identity-openid-ui/src/main/js/templates/application.html
@@ -16,6 +16,11 @@
 					<label>Name</label> <input ng-model="application.name" ng-change="startChange()" class="form-control" />
 				</div>
 			</div>
+			<div class="col-md-12">
+				<div class="form form-group">
+					<label>Callback URL</label> <input ng-model="application.callbackUrl" ng-change="startChange()" class="form-control" />
+				</div>
+			</div>
 			<div class="col-md-6">
 				<div class="form form-group">
 					<label>Client ID</label> <input ng-model="application.id" ng-change="startChange()" class="form-control" />
@@ -42,10 +47,26 @@
 			</div>
 			
 			<div class="col-md-12">
-				<label>Issuer</label>	</br>
-				<div>{{ meta.issuer }}</div>	
+				<div class="form form-group">
+					<select ng-model="application.clienntSigningAlg" ng-change="startChange()">
+						<option value="RS256">RS256 (Asysmetric)</option>
+						<!-- 
+						<option>RS384</option>
+						<option>RS512</option>
+						 -->
+						<option value="HS256">HS256 (Symetric)</option>
+						<!--
+						<option>HS384</option>
+						<option>HS512</option>
+						-->
+					</select>
+				</div>
 			</div>
 			
+			
+			<div class="col-md-12">
+				<span ng-click="testOAuthApp()" class="btn btn-primary">Test Access for current User</span>
+			</div>
 		</div>
 	</div>
 	
