--- a/an-identity-ldapotp/an-identity-ldapotp-ui/src/main/js/templates/otps.html
+++ b/an-identity-ldapotp/an-identity-ldapotp-ui/src/main/js/templates/otps.html
@@ -1,8 +1,11 @@
 <div ng-controller="MyOtpController">
-	<div ng-if="!supported">
+	<div ng-if="!loaded">
+		<span><i>Loading....</i></span>
+	</div>
+	<div ng-if="!supported && loaded">
 		<span><i>TOTP not supported for this account</i></span>
 	</div>
-	<div ng-if="supported">
+	<div ng-if="supported && loaded">
 		
 		<span ng-if="tokens.length == 0"><i>No tokens configured</i></span>
 		<table class="table table-striped table-compact">
@@ -64,7 +67,7 @@
 		</div>
 		<div class="form-group">
 			<div class="form-inline" ng-if="!imageUrl">
-				<input class="form-control" ng-model="tokenRequest.comment">
+				<input class="form-control" ng-model="tokenRequest.comment" size="50">
 				<button class="btn btn-primary" ng-click="addToken()"><i class="glyhpicon glyhpicon-plus-sign"></i> add</button>
 			</div>
 		</div>
