added offline access scope

--- a/an-identity-openid/an-identity-openid-ui/src/main/js/templates/application.html
+++ b/an-identity-openid/an-identity-openid-ui/src/main/js/templates/application.html
@@ -43,6 +43,8 @@
 						<label for="scope_profile">Profile information</label><br/>
 					<img src="/openid/img/phone.svg" width="20" height="20" />&nbsp;<input type="checkbox" checklist-model="application.scopes"  id="scope_phone"   checklist-change="startChange()"   checklist-value="'phone'"/>
 						<label for="scope_phone">Telephone number</label><br/>
+					<img src="/openid/img/offline.svg" width="20" height="20" />&nbsp;<input type="checkbox" checklist-model="application.scopes"  id="scope_offline"   checklist-change="startChange()"   checklist-value="'offline_access'"/>
+						<label for="offline_phone">Offline Access (Refrehs Token)</label><br/>	
 				</div>
 			</div>
 			
