--- a/an-identity-openid/an-identity-openid-ui/src/main/js/templates/applications.html
+++ b/an-identity-openid/an-identity-openid-ui/src/main/js/templates/applications.html
@@ -42,6 +42,9 @@
 						<span ng-switch-when="phone">
 							<img src="/openid/img/phone.svg" width="20" height="20" title="Telephone number"/>&nbsp;
 						</span>
+						<span ng-switch-when="offline_access">
+							<img src="/openid/img/offline.svg" width="20" height="20" title="Offline Access"/>&nbsp;
+						</span>
 						<span ng-switch-default="">{{scope}}</span>
 					</span>
 				</td>
