--- a/an-identity-openid/an-identity-openid-ui/src/main/js/templates/authorize.html
+++ b/an-identity-openid/an-identity-openid-ui/src/main/js/templates/authorize.html
@@ -21,6 +21,9 @@
 					<div ng-switch-when="phone">
 						<img src="/openid/img/phone.svg" width="20" height="20" />&nbsp;Telephone number
 					</div>
+					<div ng-switch-when="offline_access">
+						<img src="/openid/img/offline.svg" width="20" height="20" />&nbsp;Offline Access (Refresh Token)
+					</div>
 					<div ng-switch-default="">
 						{{scope}}
 					</div>
